[package]
name = "rpc-test"
version = "0.1.0"
authors = ["Matthias Oertel"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
confy = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
subprocess = "0.1.18"

